--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </header>
     <body>
         <h2><a id="sobre"></a>Sobre Mim</h2>
-        <p>Meu Nome é Matheus de Castro. Sou estudante de infomática e tenho interesse em desenvolvimento web.</p>
-        <h2><a id="hobbies">Meus Hobbies</a></h2>
-        <li>Programar</li>
+        <p>Nós somos Thays Tavares e Ester Rodrigues. Estudantes de infomática e tenho interesse em desenvolvimento web.</p>
+        <h2><a id="hobbies">Nossos Hobbies</a></h2>
+        <li>Passear</li>
         <li>Escutar Músicas</li>
-        <li>Jogar</li>
+        <li>Jogar Volei</li>
     </body>
     <footer>
         <h2><a id="contato"></a>Contato</h2>
-        <p>Email: matheus.castro09@aluno.ifce.edu.br</p>
+        <p>Email: thaystavares@aluno.ifce.edu.br__ester.r@aluno.ifce.edu.br</p>
     </footer>
 </html>
